# snafu

./: .cirrus.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  netlify.toml
compatibility-tests/: .gitignore
compatibility-tests/alloc-only/: Cargo.toml
compatibility-tests/alloc-only/src/: main.rs
compatibility-tests/backtrace-provider-api/: Cargo.toml
compatibility-tests/backtrace-provider-api/src/: lib.rs
compatibility-tests/backtrace-shim/: Cargo.toml
compatibility-tests/backtrace-shim/tests/: backtrace.rs  backtrace_delegation.rs  whatever_nested.rs
compatibility-tests/backtraces-impl-backtrace-crate/: Cargo.toml
compatibility-tests/backtraces-impl-backtrace-crate/src/: lib.rs
compatibility-tests/backtraces-impl-inert/: Cargo.toml
compatibility-tests/backtraces-impl-inert/src/: lib.rs
compatibility-tests/backtraces-impl-std/: Cargo.toml  rust-toolchain
compatibility-tests/backtraces-impl-std/src/: lib.rs
compatibility-tests/compile-fail/: Cargo.toml
compatibility-tests/compile-fail/tests/compile-fail/: error-reporting.rs  visibility.rs
compatibility-tests/compile-fail/tests/ui/: attribute-duplication.rs  attribute-duplication.stderr  attribute-misuse-opt-out-wrong-field.rs  attribute-misuse-opt-out-wrong-field.stderr  attribute-misuse.rs  attribute-misuse.stderr  attribute-unparseable.rs  attribute-unparseable.stderr  context-selector-naming.rs  context-selector-naming.stderr  duplication-backtrace-attributes.rs  duplication-backtrace-attributes.stderr  (+44 more)
compatibility-tests/context-selectors-have-documentation/: Cargo.toml
compatibility-tests/context-selectors-have-documentation/src/: lib.rs
compatibility-tests/futures/: Cargo.toml
compatibility-tests/futures-0.1/: Cargo.toml
compatibility-tests/futures-0.1/src/: lib.rs
compatibility-tests/futures-0.1/tests/: futures.rs
compatibility-tests/futures/src/: lib.rs  location.rs  report.rs
compatibility-tests/futures/tests/: futures.rs
compatibility-tests/nightly/: Cargo.toml
compatibility-tests/nightly/tests/: unstable_attributes.rs
compatibility-tests/provider-api/: Cargo.toml
compatibility-tests/provider-api/src/: lib.rs
compatibility-tests/renamed-import/: Cargo.toml
compatibility-tests/renamed-import/src/: lib.rs
compatibility-tests/report-provider-api/: Cargo.toml
compatibility-tests/report-provider-api/src/: lib.rs
compatibility-tests/report-try-trait/: Cargo.toml
compatibility-tests/report-try-trait/src/: lib.rs
compatibility-tests/unstable-backtraces-impl-std/: Cargo.toml
compatibility-tests/unstable-backtraces-impl-std/src/: lib.rs
compatibility-tests/v1_18/: Cargo.toml
compatibility-tests/v1_18/src/: lib.rs
compatibility-tests/v1_18/tests/: v1_18.rs
compatibility-tests/v1_30/: Cargo.toml
compatibility-tests/v1_30/src/: lib.rs
compatibility-tests/v1_30/tests/: v1_30.rs
compatibility-tests/v1_31/: Cargo.toml
compatibility-tests/v1_31/src/: lib.rs
compatibility-tests/v1_34/: Cargo.toml
compatibility-tests/v1_34/src/: lib.rs
compatibility-tests/v1_34/tests/: clean_attributes.rs
compatibility-tests/v1_56/: Cargo.toml
compatibility-tests/v1_56/src/: lib.rs
compatibility-tests/v1_61/: Cargo.toml
compatibility-tests/v1_61/src/: lib.rs
compatibility-tests/v1_65/: Cargo.toml
compatibility-tests/v1_65/src/: lib.rs
compatibility-tests/without-backtrace/: Cargo.toml
compatibility-tests/without-backtrace/src/: lib.rs
compatibility-tests/without-backtrace/tests/: without_backtrace.rs
compatibility-tests/yeet-selectors/: Cargo.toml
compatibility-tests/yeet-selectors/src/: lib.rs
examples/: simple.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
my-error-derive/: Cargo.toml
my-error-derive/src/: lib.rs
snafu-derive/: Cargo.toml
snafu-derive/src/: lib.rs  parse.rs  report.rs  shared.rs
snafu-derive/src/parse/: attr.rs  enum_impl.rs  field_container_impl.rs  field_impl.rs  named_struct_impl.rs  tuple_struct_field_impl.rs  tuple_struct_impl.rs  variant_impl.rs
snafu-derive/src/report/: parse.rs
snafu-derive/tests/: compiletest.rs
snafu-derive/tests/compile-fail/: error-reporting.rs  visibility.rs
src/: Snafu.md  backtrace_impl_backtrace_crate.rs  backtrace_impl_std.rs  backtrace_inert.rs  backtrace_shim.rs  boxed_impls.rs  error_chain.rs  fallback_error.rs  guide.md  lib.rs  no_std_error.rs  report.rs  whatever.rs
src/futures/: mod.rs  sink.rs  try_future.rs  try_stream.rs
src/futures01/: future.rs  mod.rs  sink.rs  stream.rs
src/guide/: attributes.md  attributes.rs  common.rs  compatibility.md  compatibility.rs  feature_flags.md  feature_flags.rs  generics.md  generics.rs  mod.rs  opaque.md  opaque.rs  philosophy.md  philosophy.rs  structs.md  the_macro.md  the_macro.rs  upgrading.md  upgrading.rs  what_code_is_generated.md
src/guide/common/: missing_field_source.md
src/guide/comparison/: failure.md  failure.rs  mod.rs
src/guide/examples/: backtrace.rs  basic.rs
src/guide/troubleshooting/: missing_field_source.md
tests/: backtrace-optional-enabled.rs  backtrace-optional.rs  backtrace.rs  backtrace_attributes.rs  backtrace_delegation.rs  basic.rs  boxed_error.rs  boxed_error_trait_object.rs  boxing-errors.rs  build-leaf-error.rs  context-selectors-make-dead-code.rs  context_selector_name.rs  custom_selector_name.rs  default_error_display.rs  display-shorthand.rs  doc_comment.rs  ensure.rs  error_chain.rs  generics.rs  generics_with_default.rs  implicit.rs  location.rs  mapping_result_without_try_operator.rs  multiple_attributes.rs  name-conflicts.rs  no_context.rs  opaque.rs  options.rs  premade_error.rs  raw_idents.rs  recursive_error.rs  report.rs  send_between_threads.rs  single_use_lifetimes_lint.rs  source_and_backtrace.rs  source_attributes.rs  stringly_typed.rs  structs.rs  thread_error.rs  transparent.rs  (+2 more)
tests/structs/: backtrace.rs  backtrace_attributes.rs  context_selector_name.rs  display.rs  from_option.rs  generics.rs  main.rs  module.rs  no_context.rs  single_use_lifetimes.rs  source_attributes.rs  visibility.rs  with_source.rs  without_source.rs
(+4 files in other folders)
