[package]
name = "snafu"
version = "0.6.10"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"

readme = "README.md"
description = "An ergonomic error handling library"
documentation = "https://docs.rs/snafu"
repository = "https://github.com/shepmaster/snafu"

license = "MIT OR Apache-2.0"

keywords = ["error", "ergonomic", "library", "no_std"]
categories = ["rust-patterns", "no-std"]

exclude = [
  "/.cirrus.yml",
  "/.gitignore",
  "/rust-toolchain",
]

[package.metadata.docs.rs]
# The backtraces-impl-* features are incompatible with each other
features = [ "std", "backtraces", "futures-01", "futures", "guide" ]

[features]
default = ["std", "guide"]

# Implement the `std::error::Error` trait.
std = []

# Makes the backtrace type live
backtraces = ["std", "backtrace"]

# The backtrace type becomes `backtrace::Backtrace`
backtraces-impl-backtrace-crate = ["backtraces"]

# The backtrace type becomes `std::backtrace::Backtrace` and we
# implement `std::error::Error::backtrace`
unstable-backtraces-impl-std = ["backtraces", "snafu-derive/unstable-backtraces-impl-std"]

# Add extension traits for the futures 0.1 crate
futures-01 = ["futures-01-crate"]

# The standard library's implementation of futures
futures = ["futures-core-crate", "pin-project"]

# Include the built-in user guide documentation
guide = []

# No public user should make use of this feature
# https://github.com/rust-lang/cargo/issues/1596
"internal-dev-dependencies" = ["futures-crate"]

[workspace]
# The compatibility tests each set feature flags for the library and
# cannot be in the same crate graph.
exclude = ["compatibility-tests"]

[dependencies]
snafu-derive = { path = "snafu-derive", version = "0.6.10" }
doc-comment = { version = "0.3.1", default-features = false }
backtrace = { version = "0.3.0", optional = true }
futures-01-crate = { package = "futures", version = "0.1", optional = true, default-features = false }
futures-crate = { package = "futures", version = "0.3.0", optional = true, default-features = false }
futures-core-crate = { package = "futures-core", version = "0.3.0", optional = true, default-features = false }
pin-project = { version = "0.4", optional = true, default-features = false }
