[package]
name = "backtraces-impl-backtrace-crate"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = { path = "../../", features = ["backtraces-impl-backtrace-crate"] }
backtrace = "*"
