[package]
name = "v1_18"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]

[dependencies]
snafu = { path = "../..", default-features = false, features = ["backtraces"] }
snafu-derive = { path = "../../snafu-derive" }

# These versions are the last versions to support Rust 1.18
backtrace = "= 0.3.0"
backtrace-sys = "= 0.1.3"
libc = "= 0.2.7"
syn = "= 0.15.37"
