[package]
name = "v1_30"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]

[dependencies]
snafu = { path = "../..", default-features = false, features = ["rust_1_30", "backtraces"] }

# These versions are the last versions to support Rust 1.30
backtrace = "= 0.3.30"
backtrace-sys = "= 0.1.28"
cc = "= 1.0.41"
rustc-demangle = "= 0.1.13"
