[package]
name = "v1_34"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"

[dependencies]
snafu = { path = "../..", default-features = false, features = ["backtraces"] }

# These versions are the last versions to support Rust 1.34
backtrace = "= 0.3.35"
cc = "= 1.0.79"
proc-macro2 = "= 1.0.65"
quote = "= 1.0.30"
rustc-demangle = "= 0.1.20"
