[package]
name = "v1_56"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"
rust-version = "1.56"

[dependencies]
snafu = { path = "../..", default-features = false, features = ["std"] }

# These versions are the last versions to support Rust 1.56
quote = { version = "=1.0.40", default-features = false }
