[package]
name = "v1_61"
version = "0.1.0"
authors = ["Jake Goulding <jake.goulding@gmail.com>"]
edition = "2018"
rust-version = "1.61"

[dependencies]
snafu = { path = "../..", default-features = false, features = ["std"] }

# These versions are the last versions to support Rust 1.61
quote = { version = "=1.0.41", default-features = false }
syn = { version = "=2.0.106", default-features = false }
